--- a/00_mp.html
+++ b/00_mp.html
@@ -13,9 +13,11 @@
     <div class="index-nav">
       <div class="container">
         <ul class="nav justify-content-end ">
+          <li class="nav-item border-right">
+            <a class="nav-link bg-primary text-white" href="#">內政申辦服務一站式入口平台</a>
+          </li>
           <li class="nav-item mr-4 ">
             <a class="nav-link bg-primary text-white" href="#">回首頁</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -51,6 +53,7 @@
         <div class="row">
           <div class="col-lg-8">
             <div class="index-list-bg">
+              <div class=" text-primary h4 d-flex justify-content-center">最新公告</div>
               <div class="d-flex mt-3 mb-2">
                 <a href="" class="mr-2 btn btn-primary p-2 pl-4 pr-4">公益資訊平台公告</a>
                 <a href="" class="mr-2 btn btn-light p-2 pl-4 pr-4">行政公告</a>
