word_and_ui_fixed

--- a/01_priority.html
+++ b/01_priority.html
@@ -287,6 +287,7 @@
                     <th scope="col">申請人</th>
                     <th scope="col">申請日期</th>
                     <th scope="col">審查完成日期</th>
+                    <th scope="col">操作</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -297,6 +298,9 @@
                     <td>張三豐</td>
                     <td>2018/09/01</td>
                     <td>2018/09/09</td>
+                    <td>
+                      <a href="#" class="btn btn-secondary list-btn">檢視</a>
+                    </td>
                   </tr>
                   <tr>
                     <td scope="row">2</td>
@@ -305,6 +309,9 @@
                     <td>張三豐</td>
                     <td>2018/08/27</td>
                     <td>218/08/30</td>
+                    <td>
+                      <a href="#" class="btn btn-secondary list-btn">檢視</a>
+                    </td>
                   </tr>
                 </tbody>
               </table>
