--- a/05_disagree_application.html
+++ b/05_disagree_application.html
@@ -103,14 +103,14 @@
   </nav>
   <div class="container ">
     <div class="pt-3 pb-5">
-      <h2 class="title text-primary">工作計畫及經費預算備查申請</h2>
+      <h2 class="title text-primary">工作計畫及經費預算備查申請–資料檢視</h2>
       <div class="row pb-4 pt-4">
         <div class="col-12">
           <div class="card-header bg-primary text-white disagree-application-bg">
-            資料檢視
+            審核意見
           </div>
           <div class="alert alert-danger mt-2" role="alert">
-            缺漏董事會議紀錄，請補上。
+            因備查文件多處誤植及缺少資料，故本部不予受理
           </div>
         </div>
         <div class="col-12">
@@ -190,8 +190,7 @@
                   </tr>
                   <tr class="row">
                     <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
-                      <span class="text-danger">* </span>
-                      聯絡電話：
+                      <span class="text-danger">*</span> 申請人聯絡電話
                     </th>
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 ">
                       <span>02-23456789 # 110</span>
@@ -222,7 +221,7 @@
           <div class="card shadow-sm ">
               <div class="card-body card-table">  
                 <table class="table-style" > 
-                  <tbody class="">
+                  <tbody class="word-link">
                     <tr class="row">
                       <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
                         <span class="text-danger">* </span>工作計畫
