--- a/07_revoke_application.html
+++ b/07_revoke_application.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="stylesheets/all.css" />
-  <title>同意申請案件檢視頁</title>
+  <title>自行撤銷檢視頁</title>
 </head>
 
 <body>
@@ -103,23 +103,26 @@
   </nav>
   <div class="container ">
     <div class="pt-3 pb-5">
-      <h2 class="title text-primary">工作計畫及經費預算備查申請</h2>
+      <h2 class="title text-primary">工作計畫及經費預算備查申請-資料檢視</h2>
       <div class="row pb-4 pt-4">
         <div class="col-12">
-          <div class="card-header bg-primary text-white agree-application-bg  mb-3">
-            資料檢視
+          <div class="card-header bg-primary text-white ">
+            自行撤銷理由
+          </div>
+          <div class="alert alert-danger mt-2" role="alert">
+            因備查文件多有缺漏一時無法提供，故先自行撤件擇日再申請。
           </div>
         </div>
         <div class="col-12">
           <div class="card shadow-sm ">
-            <div class="card-body card-table">  
+            <div class="card-body card-table">
               <div class="row">
                 <div class="col text-danger">註 : * 為必填(選)欄位，不能為空白</div>
-              </div> 
+              </div>  
               <table class="table-style" > 
-                <tbody >
+                <tbody class="">
                   <tr class="row">
-                    <th class="col-sm-4 table-title pb-3 pt-3 ">
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
                       <span class="text-danger">* </span>全國性內政財團法人名稱
                     </th>
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 ">
@@ -127,7 +130,7 @@
                     </td>
                   </tr>
                   <tr class="row">
-                    <th class="col-sm-4 table-title pb-3 pt-3 ">
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
                       <span class="text-danger">* </span>財團法人類型 
                     </th>
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 ">
@@ -135,7 +138,7 @@
                     </td>
                   </tr>
                   <tr class="row">
-                    <th class="col-sm-4 table-title pb-3 pt-3 ">
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
                       <span class="text-danger">* </span>主管機關 
                     </th>
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 ">
@@ -143,7 +146,7 @@
                     </td>
                   </tr>
                   <tr class="row">
-                    <th class="col-sm-4 table-title pb-3 pt-3 ">
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
                       <span class="text-danger">* </span>業管機關 
                     </th>
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 ">
@@ -151,7 +154,7 @@
                     </td>
                   </tr>
                   <tr class="row">
-                    <th class="col-sm-4 table-title pb-3 pt-3 ">
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
                       <span class="text-danger">* </span>業管單位
                     </th>
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 ">
@@ -159,7 +162,7 @@
                     </td>
                   </tr>
                   <tr class="row">
-                    <th class="col-sm-4 table-title pb-3 pt-3 ">
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
                       <span class="text-danger">* </span>
                       工作計畫及經費預算是否與<br>洗錢或資恐高風險國家或地區有關
                     </th>
@@ -168,7 +171,7 @@
                     </td>
                   </tr>
                   <tr class="row">
-                    <th class="col-sm-4 table-title pb-3 pt-3 ">
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
                       <span class="text-danger">* </span>
                       年度
                     </th>
@@ -177,7 +180,7 @@
                     </td>
                   </tr>
                   <tr class="row">
-                    <th class="col-sm-4 table-title pb-3 pt-3">
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3">
                       <span class="text-danger">* </span>
                       申請人姓名
                     </th>
@@ -186,16 +189,15 @@
                     </td>
                   </tr>
                   <tr class="row">
-                    <th class="col-sm-4 table-title pb-3 pt-3 ">
-                      <span class="text-danger">* </span>
-                      聯絡電話：
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
+                      <span class="text-danger">*</span> 申請人聯絡電話
                     </th>
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 ">
                       <span>02-23456789 # 110</span>
                     </td>
                   </tr>
                   <tr class="row">
-                    <th class="col-sm-4 table-title pb-3 pt-3 ">
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
                       <span class="text-danger">* </span>
                       申請人Email
                     </th>
@@ -211,7 +213,7 @@
       </div>
       <div class="row pb-4 pt-4">
         <div class="col-12">
-          <div class="card-header bg-primary text-white agree-application-bg ">
+          <div class="card-header bg-primary text-white">
             已上傳附件
           </div>
         </div>
@@ -225,11 +227,14 @@
                         <span class="text-danger">* </span>工作計畫
                       </th>
                       <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 row">
-                        <div class="col-xl-4 td-list-item"><a href="" class="">工作計畫1.jpg</a>
+                        <div class="col-xl-4 td-list-item">
+                          <a href="" class="">工作計畫1.jpg</a>
                         </div>
-                        <div class="col-xl-4 d-flex td-list-item"><a href="" class="">工作計畫2.jpg</a>
+                        <div class="col-xl-4 d-flex td-list-item">
+                          <a href="" class="">工作計畫2.jpg</a>
                         </div>
-                        <div class="col-xl-4 d-flex td-list-item"><a href="" class="">工作計畫書.PDF</a>
+                        <div class="col-xl-4 d-flex td-list-item">
+                          <a href="" class="">工作計畫書.PDF</a>
                         </div>
                       </td>
                     </tr>
@@ -238,11 +243,14 @@
                         <span class="text-danger">* </span>經費預算
                       </th>
                       <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 row">
-                        <div class="col-xl-4 td-list-item"><a href="" class="">工作計畫1.jpg</a>
+                        <div class="col-xl-4 td-list-item">
+                          <a href="" class="">工作計畫1.jpg</a>
                         </div>
-                        <div class="col-xl-4 d-flex td-list-item"><a href="" class="">工作計畫2.jpg</a>
+                        <div class="col-xl-4 d-flex td-list-item">
+                          <a href="" class="">工作計畫2.jpg</a>
                         </div>
-                        <div class="col-xl-4 d-flex td-list-item"><a href="" class="">工作計畫書.PDF</a>
+                        <div class="col-xl-4 d-flex td-list-item">
+                          <a href="" class="">工作計畫書.PDF</a>
                         </div>
                       </td>
                     </tr>
@@ -251,8 +259,8 @@
                         <span class="text-danger">* </span>董事會議紀錄
                       </th>
                       <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 row">
-                        <div class="col-xl-4 td-list-item"><a href="" class="">
-                          董事會議紀錄.jpg </a>
+                        <div class="col-xl-4 td-list-item">
+                          <a href="">董事會議紀錄.jpg </a>
                         </div>
                       </td>
                     </tr>
@@ -262,7 +270,9 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center mb-4"><a href="#" class="btn btn-primary list-btn">回上一頁</a></div>
+      <div class="d-flex justify-content-center mb-4">
+        <a href="#" class="btn btn-primary list-btn">回上一頁</a>
+      </div>
     </div>
   </div>
   <footer class="bg-primary footer-bg p-4 ">
