--- a/11_application_and_check.html
+++ b/11_application_and_check.html
@@ -120,7 +120,7 @@
         </div>
         <div class="col-12 mt-2 ">
           <div class="card-header bg-primary text-white ">
-            已核備工作計畫及經費預算列表
+            工作計畫及經費預算備查歷程
           </div>
         </div>
         <div class="col-12 mt-2 mb-4">
@@ -157,7 +157,7 @@
                       <input type="text" class="form-control">
                     </div>
                   </div>
-                  <div class=" col-lg-6 search-form-btn">
+                  <div class="  search-form-btn ml-auto">
                     <button type="button" class="btn btn-primary mr-2 ml-2 list-btn ">查詢
                     </button>
                   </div>
