--- a/14_password.html
+++ b/14_password.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="stylesheets/all.css" />
-  <title>帳號維護</title>
+  <title>修改密碼</title>
 </head>
 
 <body>
@@ -103,7 +103,7 @@
   </nav>
   <div class="container ">
     <div class="pt-3 pb-5">
-      <h2 class="title text-primary">帳號維護</h2>
+      <h2 class="title text-primary">修改密碼</h2>
       <div class="row justify-content-center pb-4 pt-4">
         <div class="col-md-7">
           <div class="card shadow-sm bg-light">
