--- a/index.html
+++ b/index.html
@@ -46,46 +46,50 @@
           <td colspan="2"><a href="05_disagree_application.html">disagree_application.html</a></td>
         </tr>
         <tr>
-          <th scope="row">7.同意備查案件檢視頁</th>
+          <th scope="row">7.自行撤銷檢視</th>
           <td colspan="2"><a href="06_agree_application.html">agree_application.html</a></td>
         </tr>
         <tr>
-          <th scope="row">8.工作計畫及經費預算備查申請-暫存待申請送件資料列表頁</th>
-          <td colspan="2"><a href="07_temporarily.html">temporarily.html</a></td>
+          <th scope="row">8.同意備查案件檢視頁</th>
+          <td colspan="2"><a href="07_revoke_application.html">revoke_application</a></td>
         </tr>
         <tr>
-          <th scope="row">9.新增工作計畫及經費預算備查申請頁</th>
-          <td colspan="2"><a href="08_add_application.html">add_application.html</a></td>
+          <th scope="row">9.工作計畫及經費預算備查申請-暫存待申請送件資料列表頁</th>
+          <td colspan="2"><a href="08_temporarily.html">temporarily.html</a></td>
         </tr>
         <tr>
-          <th scope="row">10.送件成功資訊頁</th>
-          <td colspan="2"><a href="09_success.html">success.html</a></td>
+          <th scope="row">10.新增工作計畫及經費預算備查申請頁</th>
+          <td colspan="2"><a href="09_add_application.html">add_application.html</a></td>
         </tr>
         <tr>
-          <th scope="row">11.工作計畫及經費預算備查申請-備查歷程資料列表及查詢功能頁</th>
-          <td colspan="2"><a href="10_application_and_check.html">application_and_check.html</a>
+          <th scope="row">11.送件成功資訊頁</th>
+          <td colspan="2"><a href="10_success.html">success.html</a></td>
+        </tr>
+        <tr>
+          <th scope="row">12.工作計畫及經費預算備查申請-備查歷程資料列表及查詢功能頁</th>
+          <td colspan="2"><a href="11_application_and_check.html">application_and_check.html</a>
             <br>(點選［撤銷］按鈕會出現 model)
           </td>
         </tr>
         <tr>
           <th scope="row">12.工作計畫及經費預算備查申請-備查歷程資料列表點”撤銷”鈕彈出視窗</th>
-          <td colspan="2"><a href="11_model.html">model.html </a><br>model 元件</td>
+          <td colspan="2"><a href="12_model.html">model.html </a><br>model 元件</td>
         </tr>
         <tr>
           <th scope="row">13.工作計畫及經費預算備查申請-已核備工作計畫及經費預算列表頁</th>
-          <td colspan="2"><a href="12_ready_check.html">ready_check.html</a></td>
+          <td colspan="2"><a href="13_ready_check.html">ready_check.html</a></td>
         </tr>
         <tr>
           <th scope="row">14.帳號維護-修改密碼頁</th>
-          <td colspan="2"><a href="13_password.html">password.html</a></td>
+          <td colspan="2"><a href="14_password.html">password.html</a></td>
         </tr>
         <tr>
           <th scope="row">15.帳號維護-基本資料維護頁</th>
-          <td colspan="2"><a href="14_basic_information.html">basic_information.html</a></td>
+          <td colspan="2"><a href="15_basic_information.html">basic_information.html</a></td>
         </tr>
         <tr>
           <th scope="row">16.新增工作報告及財務報表備查申請頁</th>
-          <td colspan="2"><a href="15_work_report.html">work_report.html</a></td>
+          <td colspan="2"><a href="16_work_report.html">work_report.html</a></td>
         </tr>
       </tbody>
     </table>
