--- a/04_change_application.html
+++ b/04_change_application.html
@@ -103,11 +103,14 @@
   </nav>
   <div class="container ">
     <div class="pt-3 pb-5">
-      <h2 class="title text-primary">工作計畫及經費預算備查申請及查詢</h2>
+      <h2 class="title text-primary">工作計畫及經費預算備查申請–資料退補正(件)</h2>
       <div class="row pb-4 pt-4">
         <div class="col-12">
           <div class="card-header bg-primary text-white mb-3 change-application-bg">
-            審核意見回覆
+            審核意見
+          </div>
+          <div class="alert alert-danger mt-2" role="alert">
+            缺漏董事會議紀錄，請補上。
           </div>
         </div>
         <div class="col-12">
@@ -197,7 +200,7 @@
                 </div>
                 <div class="form-group row form-border">
                   <label  class="col-sm-4 col-form-label form-title">
-                    <span class="text-danger">*</span> 聯絡電話：</label>
+                    <span class="text-danger">*</span> 申請人聯絡電話</label>
                   <div class="col-sm-8">
                     <div class="form-row mb-2">
                       <div class="col-4">
@@ -241,7 +244,7 @@
           <div class="card shadow-sm ">
             <div class="card-body card-table">
               <table class="table-style">
-                <tbody >
+                <tbody class="word-link">
                   <tr class="row">
                     <th class="col-sm-4 table-title pb-3 pt-3 ">
                       <span class="text-danger">* </span>工作計畫
