--- a/10_success.html
+++ b/10_success.html
@@ -146,7 +146,7 @@
         </div>
       </div>
       <div class="d-flex justify-content-center mb-4">
-        <a href="#" class="btn btn-primary list-btn">回上一頁</a>
+        <a href="#" class="btn btn-primary list-btn">返回</a>
       </div>
     </div>
   </div>
