--- a/15_basic_information.html
+++ b/15_basic_information.html
@@ -106,11 +106,6 @@
       <h2 class="title text-primary">基本資料維護</h2>   
       <div class="row justify-content-center pb-4 pt-4">
         <div class="col-12">
-          <div class="card-header bg-primary text-white mb-3">
-            資料檢視
-          </div>
-        </div>
-        <div class="col-12">
           <div class="card shadow-sm ">
             <div class="card-body card-table">
               <div class="row">
@@ -127,7 +122,7 @@
                 </div>
                 <div class="row mb-3 form-border">
                   <label for="" class="form-title col-sm-3" >
-                    <span class="text-danger">*</span>出生日期（西元）</label>
+                    <span class="text-danger">*</span> 出生日期（西元）</label>
                   <div class="col-sm-9">
                     <input type="" class="form-control" placeholder="1983/11/01" >
                   </div>
@@ -159,21 +154,21 @@
                 </div>
                 <div class="row mb-3 form-border">
                   <label for="" class="form-title col-sm-3"><span
-                      class="text-danger">*</span>電子郵件：</label>
+                      class="text-danger">*</span> 電子郵件</label>
                   <div class="col-sm-9">
                     <input type="text" class="form-control"  placeholder="tseng_kuo_ching@hotmail.com">
                   </div>
                 </div>
                 <div class="row mb-3 form-border">
                   <label for="" class="form-title col-sm-3"><span
-                      class="text-danger">*</span>身分證號/外來人口統一號：</label>
+                      class="text-danger">*</span> 身分證號/外來人口統一證號</label>
                   <div class="col-sm-9">
                     <input type="text" placeholder="A123456789" class="form-control" >
                   </div>
                 </div>
                 <div class="row mb-3 form-border">
                   <label for="" class="form-title col-sm-3">
-                    <span class="text-danger">*</span> 聯絡電話：</label>
+                    <span class="text-danger">*</span> 聯絡電話</label>
                   <div class="col-sm-9">
                     <div class="form-row mb-2">
                       <div class="col-4"><input type="tel" class="form-control"></div>
@@ -188,7 +183,7 @@
                 </div>
                 <div class="row mb-3 form-border">
                   <label class="form-title col-sm-3">
-                    <span class="text-danger">*</span> 居住地址：</label>
+                    <span class="text-danger">*</span> 居住地址</label>
                   <div class="col-sm-9">
                     <div class="form-row mb-2">
                       <div class="col-md-4 my-1 mb-3">
@@ -209,20 +204,22 @@
                       </div>
                     </div>
                     <div class="form-row mb-2">
-                      <div class="col-4"><input type="tel" class="form-control"></div>
-                      <div class="col-4"><input type="tel" class="form-control"></div>
+                      <div class="col-4"><input type="text" class="form-control"></div>
+                      <div>村/里</div>
+                      <div class="col-4"><input type="text" class="form-control"></div>
                       <div>鄰</div>
                     </div>
                     <div class="form-row mb-2">
-                      <div class="col-4"><input type="tel" class="form-control"></div>
-                      <div class="col-4"><input type="tel" class="form-control"></div>
+                      <div class="col-4"><input type="text" class="form-control"></div>
+                      <div>街、路段</div>
+                      <div class="col-4"><input type="text" class="form-control"></div>
                       <div>巷</div>
                     </div>
                     <div class="form-row mb-2">
-                      <div class="col-4"><input type="tel" class="form-control"></div>
+                      <div class="col-4"><input type="text" class="form-control"></div>
                       <div>弄</div>
-                      <div class="col-7"><input type="tel" class="form-control"></div>
-  
+                      <div class="col-5"><input type="text" class="form-control"></div>
+                      <div>門牌號樓室</div>
                     </div>
                   </div>
                 </div>
@@ -331,7 +328,7 @@
                 </div>
                 <div class="form row mb-3 form-border">
                   <label  class="form-title col-sm-3">
-                    <span class="text-danger">*</span> 財團法人聯絡電話：</label>
+                    <span class="text-danger">*</span> 財團法人聯絡電話</label>
                   <div class="col-sm-9">
                     <div class="form-row mb-2">
                       <div class="col-4"><input type="tel" placeholder="02" class="form-control"></div>
@@ -398,7 +395,7 @@
       </div>
       <div class="d-flex justify-content-center mb-4">
         <a href="#" class="btn bg-secondary list-btn mr-1 ml-1">清除</a>
-        <a href="#" class="btn btn-primary list-btn mr-1 ml-1">變更密碼</a>
+        <a href="#" class="btn btn-primary list-btn mr-1 ml-1">儲存</a>
       </div>
     </div>
   </div>
