--- a/16_work_report.html
+++ b/16_work_report.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="stylesheets/all.css" />
-  <title>新增工作計畫及經費預算備查申請頁</title>
+  <title>工作報告及財務報表備查申請及查詢</title>
 </head>
 
 <body>
@@ -87,10 +87,11 @@
             <div class="login-status ">
               <span class="mr-2">
                 使用者 : 王小明
-              </span>
+              </span>        
               <span class="mr-2">
                 登入時間 : 2018/11/24 11:51:26
               </span>
+              <span class="span-block"></span>
               <span class="mr-2">
                 登出倒數 : 19分20秒
               </span>
@@ -102,11 +103,11 @@
   </nav>
   <div class="container ">
     <div class="pt-3 pb-5">
-      <h2 class="title text-primary">工作計畫及經費預算備查申請及查詢</h2>
+      <h2 class="title text-primary">工作報告及財務報表備查申請及查詢</h2>
       <div class="row pb-4 pt-4">
         <div class="col-12">
           <div class="card-header bg-primary text-white mb-3">
-            新增工作計畫及經費預算備查
+            新增工作報告及財務報表備查
           </div>
         </div>
         <div class="col-12">
@@ -117,7 +118,7 @@
               </div>
               <form class="mt-3 form-style">
                 <div class="form-group row form-border">
-                  <label class="col-sm-4 col-form-label form-title">
+                  <label for="" class="col-sm-4 col-form-label form-title">
                     <span class="text-danger">* </span>全國性內政財團法人名稱</label>
                   <div class="col-sm-8">
                     <p>財團法人義勇消防人員安全濟助基金會</p>
@@ -131,7 +132,7 @@
                   </div>
                 </div>
                 <div class="form-group row form-border">
-                  <label  class="col-sm-4 col-form-label form-title">
+                  <label class="col-sm-4 col-form-label form-title">
                     <span class="text-danger">* </span>主管機關</label>
                   <div class="col-sm-8">
                     <p>內政部</p>
@@ -144,12 +145,17 @@
                     <p>消防署</p>
                   </div>
                 </div>
+                <div class="form-group row form-border">
+                  <label class="col-sm-4 col-form-label form-title">
+                    <span class="text-danger">* </span>業管單位</label>
+                  <div class="col-sm-8">
+                    <p>民力運用組</p>
+                  </div>
+                </div>
                 <fieldset class="form-group form-border">
                   <div class="row ">
-                    <legend class="col-form-label col-sm-4 pt-0 form-title">
-                      <span class="text-danger">* </span>
-                      工作計畫及經費預算是否與<br />洗錢或資恐高風險國家或地區有關
-                    </legend>
+                    <legend class="col-form-label col-sm-4 pt-0 form-title"><span class="text-danger">* </span>
+                      是否設有監察人</legend>
                     <div class="col-sm-8 d-flex">
                       <div class="form-check mr-2">
                         <input class="form-check-input" type="radio" name="gridRadios" value="option1" checked>
@@ -158,7 +164,27 @@
                         </label>
                       </div>
                       <div class="form-check mr-2">
-                        <input class="form-check-input" type="radio" name="gridRadios" value="option2">
+                        <input class="form-check-input" type="radio" name="gridRadios" value="option3">
+                        <label class="form-check-label" for="gridRadios2">
+                          否
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                </fieldset>
+                <fieldset class="form-group form-border">
+                  <div class="row ">
+                    <legend class="col-form-label col-sm-4 pt-0 form-title"><span class="text-danger">* </span>
+                      檢附上傳之財務報表是否<br>經會計師簽證</legend>
+                    <div class="col-sm-8 d-flex">
+                      <div class="form-check mr-2">
+                        <input class="form-check-input" type="radio" name="gridRadios" value="option1" checked>
+                        <label class="form-check-label" for="gridRadios1">
+                          是
+                        </label>
+                      </div>
+                      <div class="form-check mr-2">
+                        <input class="form-check-input" type="radio" name="gridRadios" value="option3">
                         <label class="form-check-label" for="gridRadios2">
                           否
                         </label>
@@ -173,33 +199,34 @@
                     <div class="form-row mb-2">
                       <div class="col my-1">
                         <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-                          <option value="108">108</option>
-                          <option selected value="109">109</option>
-                          <option value="110">110</option>
+                          <option selected>109</option>
+                          <option value="1">One</option>
+                          <option value="2">Two</option>
+                          <option value="3">Three</option>
                         </select>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="form-group row form-border">
-                  <label class="col-sm-4 col-form-label form-title"><span class="text-danger">*
-                    </span>申請人姓名</label>
+                  <label class="col-sm-4 col-form-label form-title">
+                    <span class="text-danger">*</span> 申請人姓名</label>
                   <div class="col-sm-8">
-                    <input placeholder="王小明" type="texrt" class="form-control">
+                    <input type="password" placeholder="王小明" class="form-control" id="">
                   </div>
                 </div>
                 <div class="form-group row form-border">
-                  <label  class="col-sm-4 col-form-label form-title">
-                    <span class="text-danger">*</span> 聯絡電話：</label>
+                  <label class="col-sm-4 col-form-label form-title">
+                    <span class="text-danger">*</span> 申請人聯絡電話</label>
                   <div class="col-sm-8">
                     <div class="form-row mb-2">
-                      <div class="col-4"><input type="tel"  placeholder="02" class="form-control"></div>
+                      <div class="col-4"><input type="tel" class="form-control" placeholder="02"></div>
                       <div>-</div>
-                      <div class="col-7"><input type="tel"  placeholder="2345678" class="form-control"></div>
+                      <div class="col-7"><input type="tel" class="form-control" placeholder="23456789"></div>
                       <div>#</div>
                     </div>
                     <div class="form-row mb-2">
-                      <div class="col-4"><input type="tel"  placeholder="110" class="form-control"></div>
+                      <div class="col-4"><input type="tel" class="form-control" placeholder="110"></div>
                     </div>
                   </div>
                 </div>
@@ -207,8 +234,8 @@
                   <label class="col-sm-4 col-form-label form-title"><span
                       class="text-danger">*</span>
                     申請人Email</label>
-                  <div class="col-md-8">
-                    <input type="text"  placeholder="tseng_kuo_ching@hotmail.com" class="form-control">
+                  <div class="col-sm-8">
+                    <input type="text" class="form-control" placeholder="tseng_kuo_ching@hotmail.com">
                     <div class="text-danger alert-bg">
                       注意 : 申請人不得使用大陸地區郵件帳號作為回覆郵件位址(例如qq.cn或xxx.cn等相關
                       大陸email)。email為聯繫及系統寄發案件審理通知訊息主要方式，請務必提供正確email
@@ -232,16 +259,14 @@
                       應檢附文件請依原資料大小掃描後上傳。
                     </div>
                     <div class="row form-row mb-2">
-                      <div class="col-sm-3 form-title">
-                        <span class="text-danger">* </span>工作計畫
-                      </div>
+                      <div class="col-sm-3 form-title"><span class="text-danger">* </span>工作計畫</div>
                       <div class="col-sm-9">
                         <div class="form-row d-flex align-items-center">
-                          <input class="form-control col-xl-5" id="">
+                          <input class="form-control col-xl-5">
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">＋</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 ">-</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -250,21 +275,21 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">＋</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 ">-</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="row form-row mb-2">
-                      <div class="col-sm-3 form-title"><span class="text-danger">*</span> 經費預算</div>
+                      <div class="col-sm-3 form-title"><span class="text-danger">*</span> 財務報表</div>
                       <div class="col-sm-9">
                         <div class="form-row d-flex align-items-center">
-                          <input class="form-control col-xl-5" id="">
+                          <input class="form-control col-xl-5" >
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">＋</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 ">-</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -274,11 +299,25 @@
                       <div class="col-sm-3 form-title"><span class="text-danger">*</span> 董事會議紀錄</div>
                       <div class="col-sm-9">
                         <div class="form-row d-flex align-items-center">
-                          <input class="form-control col-xl-5" id="">
+                          <input class="form-control col-xl-5">
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">＋</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 ">-</button>
+                            <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row form-row mb-2">
+                      <div class="col-sm-3 form-title"><span class="text-danger">*</span> 監察報告書</div>
+                      <div class="col-sm-9">
+                        <div class="form-row d-flex align-items-center">
+                          <input class="form-control col-xl-5">
+                          <div class="col-xl-7 mb-3 list-btn-group">
+                            <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
+                            <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 ">-</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -293,7 +332,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">＋</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 ">-</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
