--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
           <td colspan="2"><a href="05_disagree_application.html">disagree_application.html</a></td>
         </tr>
         <tr>
-          <th scope="row">7.自行撤銷檢視</th>
+          <th scope="row">7.同意備查案件檢視頁</th>
           <td colspan="2"><a href="06_agree_application.html">agree_application.html</a></td>
         </tr>
         <tr>
-          <th scope="row">8.同意備查案件檢視頁</th>
-          <td colspan="2"><a href="07_revoke_application.html">revoke_application</a></td>
+          <th scope="row">8.自行撤銷檢視</th>
+          <td colspan="2"><a href="07_revoke_application.html">revoke_application.html</a></td>
         </tr>
         <tr>
           <th scope="row">9.工作計畫及經費預算備查申請-暫存待申請送件資料列表頁</th>
