--- a/13_ready_check.html
+++ b/13_ready_check.html
@@ -146,9 +146,9 @@
                   <div class="col-lg-6 mb-3 d-flex">
                     <label for="validationCustom03">期間</label>
                     <div class="d-flex input-style">
-                      <input type="text" class="form-control">
+                      <input type="text" class="form-control date-form-control">
                       <span class="mr-1 ml-1"> - </span>
-                      <input type="text" class="form-control">
+                      <input type="text" class="form-control date-form-control">
                     </div>
                   </div>
                 </div>
