--- a/04_change_application.html
+++ b/04_change_application.html
@@ -349,7 +349,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">＋</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn ">＋</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -358,7 +358,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">＋</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn"> - </button>
                             <a href="#" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -372,7 +372,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">＋</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">＋</button>
                             <a href="#" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -388,7 +388,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">＋</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">＋</button>
                             <a href="#" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -403,7 +403,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">＋</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">＋</button>
                             <a href="#" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
