--- a/09_add_application.html
+++ b/09_add_application.html
@@ -241,7 +241,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">－</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">＋</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -250,7 +250,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">－</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">－</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -264,7 +264,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">－</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">＋</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -278,7 +278,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">－</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">＋</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -293,7 +293,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">－</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">＋</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
