--- a/16_work_report.html
+++ b/16_work_report.html
@@ -266,7 +266,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">-</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">＋</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -275,7 +275,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">-</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">-</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -289,7 +289,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">-</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">＋</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -303,7 +303,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">-</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">＋</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -317,7 +317,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">-</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">＋</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
@@ -332,7 +332,7 @@
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
-                            <button type="button" class="btn btn-primary btn-sm mr-1 ">-</button>
+                            <button type="button" class="btn btn-primary btn-sm mr-1 count-btn">＋</button>
                             <a href="" class="btn btn-outline-primary btn-sm mr-1 ">範本下載</a>
                           </div>
                         </div>
