fixed_html_h2_tage

--- a/07_revoke_application.html
+++ b/07_revoke_application.html
@@ -87,7 +87,7 @@
             <div class="login-status ">
               <span class="mr-2">
                 使用者 : 王小明
-              </span>        
+              </span>
               <span class="mr-2">
                 登入時間 : 2018/11/24 11:51:26
               </span>
@@ -103,7 +103,7 @@
   </nav>
   <div class="container ">
     <div class="pt-3 pb-5">
-      <h2 class="title text-primary">工作計畫及經費預算備查申請-資料檢視</h2>
+      <h2 class="title text-primary pt-3">工作計畫及經費預算備查申請-資料檢視</h2>
       <div class="row pb-4 pt-4">
         <div class="col-12">
           <div class="card-header bg-primary text-white ">
@@ -118,8 +118,8 @@
             <div class="card-body card-table">
               <div class="row">
                 <div class="col text-danger">註 : * 為必填(選)欄位，不能為空白</div>
-              </div>  
-              <table class="table-style" > 
+              </div>
+              <table class="table-style">
                 <tbody class="">
                   <tr class="row">
                     <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
@@ -131,7 +131,7 @@
                   </tr>
                   <tr class="row">
                     <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
-                      <span class="text-danger">* </span>財團法人類型 
+                      <span class="text-danger">* </span>財團法人類型
                     </th>
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 ">
                       <span>政府捐助</span>
@@ -139,7 +139,7 @@
                   </tr>
                   <tr class="row">
                     <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
-                      <span class="text-danger">* </span>主管機關 
+                      <span class="text-danger">* </span>主管機關
                     </th>
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 ">
                       <span>內政部</span>
@@ -147,7 +147,7 @@
                   </tr>
                   <tr class="row">
                     <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
-                      <span class="text-danger">* </span>業管機關 
+                      <span class="text-danger">* </span>業管機關
                     </th>
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 ">
                       <span>消防署</span>
@@ -205,7 +205,7 @@
                       <span>tseng_kuo_ching@hotmail.com</span>
                     </td>
                   </tr>
-                </tbody>   
+                </tbody>
               </table>
             </div>
           </div>
@@ -219,54 +219,54 @@
         </div>
         <div class="col-12 mt-2">
           <div class="card shadow-sm ">
-              <div class="card-body card-table">  
-                <table class="table-style" > 
-                  <tbody class="word-link">
-                    <tr class="row">
-                      <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
-                        <span class="text-danger">* </span>工作計畫
-                      </th>
-                      <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 row">
-                        <div class="col-xl-4 td-list-item">
-                          <a href="" class="">工作計畫1.jpg</a>
-                        </div>
-                        <div class="col-xl-4 d-flex td-list-item">
-                          <a href="" class="">工作計畫2.jpg</a>
-                        </div>
-                        <div class="col-xl-4 d-flex td-list-item">
-                          <a href="" class="">工作計畫書.PDF</a>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr class="row">
-                      <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
-                        <span class="text-danger">* </span>經費預算
-                      </th>
-                      <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 row">
-                        <div class="col-xl-4 td-list-item">
-                          <a href="" class="">工作計畫1.jpg</a>
-                        </div>
-                        <div class="col-xl-4 d-flex td-list-item">
-                          <a href="" class="">工作計畫2.jpg</a>
-                        </div>
-                        <div class="col-xl-4 d-flex td-list-item">
-                          <a href="" class="">工作計畫書.PDF</a>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr class="row">
-                      <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
-                        <span class="text-danger">* </span>董事會議紀錄
-                      </th>
-                      <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 row">
-                        <div class="col-xl-4 td-list-item">
-                          <a href="">董事會議紀錄.jpg </a>
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>   
-                </table>
-              </div>
+            <div class="card-body card-table">
+              <table class="table-style">
+                <tbody class="word-link">
+                  <tr class="row">
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
+                      <span class="text-danger">* </span>工作計畫
+                    </th>
+                    <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 row">
+                      <div class="col-xl-4 td-list-item">
+                        <a href="" class="">工作計畫1.jpg</a>
+                      </div>
+                      <div class="col-xl-4 d-flex td-list-item">
+                        <a href="" class="">工作計畫2.jpg</a>
+                      </div>
+                      <div class="col-xl-4 d-flex td-list-item">
+                        <a href="" class="">工作計畫書.PDF</a>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr class="row">
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
+                      <span class="text-danger">* </span>經費預算
+                    </th>
+                    <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 row">
+                      <div class="col-xl-4 td-list-item">
+                        <a href="" class="">工作計畫1.jpg</a>
+                      </div>
+                      <div class="col-xl-4 d-flex td-list-item">
+                        <a href="" class="">工作計畫2.jpg</a>
+                      </div>
+                      <div class="col-xl-4 d-flex td-list-item">
+                        <a href="" class="">工作計畫書.PDF</a>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr class="row">
+                    <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
+                      <span class="text-danger">* </span>董事會議紀錄
+                    </th>
+                    <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 row">
+                      <div class="col-xl-4 td-list-item">
+                        <a href="">董事會議紀錄.jpg </a>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
@@ -274,6 +274,8 @@
         <a href="#" class="btn btn-primary list-btn">回上一頁</a>
       </div>
     </div>
+
+  </div>
   </div>
   <footer class="bg-primary footer-bg p-4 ">
     <div class="container">
@@ -290,14 +292,14 @@
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
