--- a/13_ready_check.html
+++ b/13_ready_check.html
@@ -43,7 +43,7 @@
   <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light justify-content-center primary-nav mb-2">
     <div class="container ">
       <div class="phone-title">
-        <img src="img/Ministry-of-the-Interior-logo-sm.png" >
+        <img src="img/Ministry-of-the-Interior-logo-sm.png">
         <div class="nav-logo text-primary">
           全國性內政財團法人資料上網登錄系統
         </div>
@@ -87,7 +87,7 @@
             <div class="login-status ">
               <span class="mr-2">
                 使用者 : 王小明
-              </span>        
+              </span>
               <span class="mr-2">
                 登入時間 : 2018/11/24 11:51:26
               </span>
@@ -103,7 +103,7 @@
   </nav>
   <div class="container ">
     <div class=" pt-3 pb-5">
-      <h2 class="title text-primary">工作計畫及經費預算備查申請及查詢</h2>
+      <h2 class="title text-primary pt-3">工作計畫及經費預算備查申請及查詢</h2>
       <div class="row pb-4 pt-4">
         <div class="col-12">
           <ul class="nav nav-pills nav-fill nav-tag-btn mb-3 mt-2 ">
@@ -131,8 +131,8 @@
                   <div class="col-lg-3 mb-3 d-flex ">
                     <label for="validationCustom04">年度</label>
                     <select class="custom-select">
-                      <option  value="108">108</option>
-                      <option selected  value="109">109</option>
+                      <option value="108">108</option>
+                      <option selected value="109">109</option>
                       <option value="110">110</option>
                     </select>
                   </div>
@@ -154,7 +154,7 @@
                 </div>
                 <div class=" col-lg-2 search-form-btn"> <button type="button"
                     class="btn btn-primary mr-2 ml-2 list-btn ">查詢</button>
-                  </div>
+                </div>
               </form>
             </div>
           </div>
@@ -163,7 +163,7 @@
           <div class="card shadow-sm ">
             <div class="card-body table-responsive-md">
               <table class="table ">
-                <thead >
+                <thead>
                   <tr class="bg-light thead-style">
                     <th scope="col">項次</th>
                     <th scope="col">年度</th>
@@ -206,14 +206,14 @@
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
