--- a/04_change_application.html
+++ b/04_change_application.html
@@ -87,7 +87,7 @@
             <div class="login-status ">
               <span class="mr-2">
                 使用者 : 王小明
-              </span>        
+              </span>
               <span class="mr-2">
                 登入時間 : 2018/11/24 11:51:26
               </span>
@@ -103,7 +103,7 @@
   </nav>
   <div class="container ">
     <div class="pt-3 pb-5">
-      <h2 class="title text-primary">工作計畫及經費預算備查申請–資料退補正(件)</h2>
+      <h2 class="title text-primary pt-3">工作計畫及經費預算備查申請–資料退補正(件)</h2>
       <div class="row pb-4 pt-4">
         <div class="col-12">
           <div class="card-header bg-primary text-white mb-3 change-application-bg">
@@ -130,7 +130,7 @@
                 </div>
                 <div class="form-group row form-border">
                   <label class="col-sm-4 col-form-label form-title">
-                    <span class="text-danger">* </span>財團法人類型 
+                    <span class="text-danger">* </span>財團法人類型
                   </label>
                   <div class="col-sm-8">
                     <p>政府捐助</p>
@@ -160,7 +160,8 @@
                     </legend>
                     <div class="col-sm-8 d-flex">
                       <div class="form-check mr-2">
-                        <input class="form-check-input" id="option1" type="radio" name="gridRadios" value="option1" checked>
+                        <input class="form-check-input" id="option1" type="radio" name="gridRadios" value="option1"
+                          checked>
                         <label class="form-check-label" for="option1">
                           是
                         </label>
@@ -181,7 +182,7 @@
                   <div class="col-sm-8">
                     <div class="form-row mb-2">
                       <div class="col my-1">
-                        <select class="custom-select mr-sm-2"> 
+                        <select class="custom-select mr-sm-2">
                           <option value="108">108</option>
                           <option selected value="109">109</option>
                           <option value="110">110</option>
@@ -191,7 +192,7 @@
                   </div>
                 </div>
                 <div class="form-group row form-border">
-                  <label  class="col-sm-4 col-form-label form-title">
+                  <label class="col-sm-4 col-form-label form-title">
                     <span class="text-danger">*</span> 申請人姓名
                   </label>
                   <div class="col-sm-8">
@@ -199,7 +200,7 @@
                   </div>
                 </div>
                 <div class="form-group row form-border">
-                  <label  class="col-sm-4 col-form-label form-title">
+                  <label class="col-sm-4 col-form-label form-title">
                     <span class="text-danger">*</span> 申請人聯絡電話</label>
                   <div class="col-sm-8">
                     <div class="form-row mb-2">
@@ -221,7 +222,7 @@
                     <span class="text-danger">*</span> 申請人Email
                   </label>
                   <div class="col-sm-8">
-                    <input placeholder=" tseng_kuo_ching@hotmail.com" class="form-control" >
+                    <input placeholder=" tseng_kuo_ching@hotmail.com" class="form-control">
                     <div class="text-danger alert-bg">
                       注意 : 申請人不得使用大陸地區郵件帳號作為回覆郵件位址(例如qq.cn或xxx.cn等相關
                       大陸email)。email為聯繫及系統寄發案件審理通知訊息主要方式，請務必提供正確email
@@ -252,19 +253,19 @@
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 row">
                       <div class="col-xl-4 td-list-item">
                         <a href="#" class="">工作計畫1.jpg</a>
-                        <button type="button"class="btn btn-sm btn-primary mr-2 ml-2">
+                        <button type="button" class="btn btn-sm btn-primary mr-2 ml-2">
                           刪除
                         </button>
                       </div>
                       <div class="col-xl-4 d-flex td-list-item">
                         <a href="#" class="">工作計畫2.jpg</a>
-                        <button type="button"class=" btn btn-sm btn-primary mr-2 ml-2 mb-1">
+                        <button type="button" class=" btn btn-sm btn-primary mr-2 ml-2 mb-1">
                           刪除
                         </button>
                       </div>
                       <div class="col-xl-4 d-flex td-list-item">
                         <a href="#" class="">工作計畫書.PDF</a>
-                        <button type="button"class="btn btn-sm btn-primary mr-2 ml-2 mb-1">
+                        <button type="button" class="btn btn-sm btn-primary mr-2 ml-2 mb-1">
                           刪除
                         </button>
                       </div>
@@ -277,19 +278,19 @@
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 row">
                       <div class="col-xl-4 td-list-item">
                         <a href="#" class="">工作計畫1.jpg</a>
-                        <button type="button"class="btn btn-sm btn-primary mr-2 ml-2">
+                        <button type="button" class="btn btn-sm btn-primary mr-2 ml-2">
                           刪除
                         </button>
                       </div>
                       <div class="col-xl-4 d-flex td-list-item">
                         <a href="#" class="">工作計畫2.jpg</a>
-                        <button type="button"class="btn btn-sm btn-primary mr-2 ml-2 mb-1">
+                        <button type="button" class="btn btn-sm btn-primary mr-2 ml-2 mb-1">
                           刪除
                         </button>
                       </div>
                       <div class="col-xl-4 d-flex td-list-item">
                         <a href="#" class="">工作計畫書.PDF</a>
-                        <button type="button"class="btn btn-sm btn-primary mr-2 ml-2 mb-1">
+                        <button type="button" class="btn btn-sm btn-primary mr-2 ml-2 mb-1">
                           刪除
                         </button>
                       </div>
@@ -301,8 +302,8 @@
                     </th>
                     <td class="col-sm-8 d-flex align-items-center pb-3 pt-3 row">
                       <div class="col-xl-4 td-list-item"><a href="" class="">
-                        董事會議紀錄.jpg </a>
-                        <button type="button"class="btn btn-sm btn-primary mr-2 ml-2">
+                          董事會議紀錄.jpg </a>
+                        <button type="button" class="btn btn-sm btn-primary mr-2 ml-2">
                           刪除
                         </button>
                       </div>
@@ -345,7 +346,7 @@
                       </div>
                       <div class="col-sm-9">
                         <div class="form-row d-flex align-items-center">
-                          <input class="form-control col-xl-5" >
+                          <input class="form-control col-xl-5">
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
@@ -354,7 +355,7 @@
                           </div>
                         </div>
                         <div class="form-row d-flex align-items-center">
-                          <input class="form-control col-xl-5" >
+                          <input class="form-control col-xl-5">
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
@@ -384,7 +385,7 @@
                       </div>
                       <div class="col-sm-9">
                         <div class="form-row d-flex align-items-center">
-                          <input class="form-control col-xl-5" >
+                          <input class="form-control col-xl-5">
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
@@ -395,7 +396,7 @@
                       </div>
                     </div>
                     <div class="row form-row mb-2">
-                      <div class="col-sm-3 form-title">其他相關附件<br/>書表資料(無則免附)
+                      <div class="col-sm-3 form-title">其他相關附件<br />書表資料(無則免附)
                       </div>
                       <div class="col-sm-9">
                         <div class="form-row d-flex align-items-center">
@@ -462,14 +463,14 @@
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
