--- a/08_temporarily.html
+++ b/08_temporarily.html
@@ -88,7 +88,7 @@
             <div class="login-status ">
               <span class="mr-2">
                 使用者 : 王小明
-              </span>        
+              </span>
               <span class="mr-2">
                 登入時間 : 2018/11/24 11:51:26
               </span>
@@ -103,70 +103,72 @@
     </div>
   </nav>
   <div class="container ">
-    <h2 class="title text-primary">工作計畫及經費預算備查申請及查詢</h2>
-    <div class="row pb-4 pt-4">
-      <div class="col-12">
-        <ul class="nav nav-pills nav-fill nav-tag-btn mb-3 mt-2 ">
-          <li class="nav-item ">
-            <a class="nav-link  active" href="#">工作計畫及經費預算備查申請</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " href="#">已核備工作計畫及經費預算</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">工作計畫及經費預算備查歷程</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-12 mt-2">
-        <div class="card-header bg-primary text-white ">
-          工作計畫及經費預算備查申請 ( 暫存待申請送件資料 )
+    <div class="pt-3 pb-5">
+      <h2 class="title text-primary pt-3">工作計畫及經費預算備查申請及查詢</h2>
+      <div class="row pb-4 pt-4">
+        <div class="col-12">
+          <ul class="nav nav-pills nav-fill nav-tag-btn mb-3 mt-2 ">
+            <li class="nav-item ">
+              <a class="nav-link  active" href="#">工作計畫及經費預算備查申請</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="#">已核備工作計畫及經費預算</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">工作計畫及經費預算備查歷程</a>
+            </li>
+          </ul>
         </div>
-      </div>
-      <div class="col-12 mt-2">
-        <div class="card shadow-sm ">
-          <div class="card-body table-responsive">
-            <table class="table ">
-              <thead class="">
-                <tr class="bg-light thead-style">
-                  <th scope="col">項次</th>
-                  <th scope="col">年度</th>
-                  <th scope="col">申請人</th>
-                  <th scope="col">資料暫存日期</th>
-                  <th scope="col">操作</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td scope="row">1</td>
-                  <td>109年</td>
-                  <td>張三豐</td>
-                  <td>2020/01/10</td>
-                  <td>
-                    <a href="#" class="btn btn-primary table-btn">檢視</a>
-                    <a href="#" class="btn btn-light table-btn">編輯</a>
-                    <a href="#" class="btn btn-secondary table-btn">刪除</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td scope="row">2</td>
-                  <td>109年</td>
-                  <td>張三豐</td>
-                  <td>2020/01/10</td>
-                  <td class="f">
-                    <a href="#" class="btn btn-primary table-btn">檢視</a>
-                    <a href="#" class="btn btn-light table-btn">編輯</a>
-                    <a href="#" class="btn btn-secondary table-btn">刪除</a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+        <div class="col-12 mt-2">
+          <div class="card-header bg-primary text-white ">
+            工作計畫及經費預算備查申請 ( 暫存待申請送件資料 )
+          </div>
+        </div>
+        <div class="col-12 mt-2">
+          <div class="card shadow-sm ">
+            <div class="card-body table-responsive">
+              <table class="table ">
+                <thead class="">
+                  <tr class="bg-light thead-style">
+                    <th scope="col">項次</th>
+                    <th scope="col">年度</th>
+                    <th scope="col">申請人</th>
+                    <th scope="col">資料暫存日期</th>
+                    <th scope="col">操作</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td scope="row">1</td>
+                    <td>109年</td>
+                    <td>張三豐</td>
+                    <td>2020/01/10</td>
+                    <td>
+                      <a href="#" class="btn btn-primary table-btn">檢視</a>
+                      <a href="#" class="btn btn-light table-btn">編輯</a>
+                      <a href="#" class="btn btn-secondary table-btn">刪除</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td scope="row">2</td>
+                    <td>109年</td>
+                    <td>張三豐</td>
+                    <td>2020/01/10</td>
+                    <td class="f">
+                      <a href="#" class="btn btn-primary table-btn">檢視</a>
+                      <a href="#" class="btn btn-light table-btn">編輯</a>
+                      <a href="#" class="btn btn-secondary table-btn">刪除</a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="d-flex justify-content-center mb-4">
-      <a href="#" class="btn btn-primary list-btn">我要申請</a>
+      <div class="d-flex justify-content-center mb-4">
+        <a href="#" class="btn btn-primary list-btn">我要申請</a>
+      </div>
     </div>
   </div>
   <footer class="bg-primary footer-bg p-4 ">
@@ -184,14 +186,14 @@
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
