--- a/09_add_application.html
+++ b/09_add_application.html
@@ -102,7 +102,7 @@
   </nav>
   <div class="container ">
     <div class="pt-3 pb-5">
-      <h2 class="title text-primary">工作計畫及經費預算備查申請及查詢</h2>
+      <h2 class="title text-primary pt-3">工作計畫及經費預算備查申請及查詢</h2>
       <div class="row pb-4 pt-4">
         <div class="col-12">
           <div class="card-header bg-primary text-white mb-3">
@@ -131,7 +131,7 @@
                   </div>
                 </div>
                 <div class="form-group row form-border">
-                  <label  class="col-sm-4 col-form-label form-title">
+                  <label class="col-sm-4 col-form-label form-title">
                     <span class="text-danger">* </span>主管機關</label>
                   <div class="col-sm-8">
                     <p>內政部</p>
@@ -189,26 +189,25 @@
                   </div>
                 </div>
                 <div class="form-group row form-border">
-                  <label  class="col-sm-4 col-form-label form-title">
+                  <label class="col-sm-4 col-form-label form-title">
                     <span class="text-danger">*</span> 申請人聯絡電話</label>
                   <div class="col-sm-8">
                     <div class="form-row mb-2">
-                      <div class="col-4"><input type="tel"  placeholder="02" class="form-control"></div>
+                      <div class="col-4"><input type="tel" placeholder="02" class="form-control"></div>
                       <div>-</div>
-                      <div class="col-7"><input type="tel"  placeholder="2345678" class="form-control"></div>
+                      <div class="col-7"><input type="tel" placeholder="2345678" class="form-control"></div>
                       <div>#</div>
                     </div>
                     <div class="form-row mb-2">
-                      <div class="col-4"><input type="tel"  placeholder="110" class="form-control"></div>
+                      <div class="col-4"><input type="tel" placeholder="110" class="form-control"></div>
                     </div>
                   </div>
                 </div>
                 <div class="form-group row form-border">
-                  <label class="col-sm-4 col-form-label form-title"><span
-                      class="text-danger">*</span>
+                  <label class="col-sm-4 col-form-label form-title"><span class="text-danger">*</span>
                     申請人Email</label>
                   <div class="col-md-8">
-                    <input type="text"  placeholder="tseng_kuo_ching@hotmail.com" class="form-control">
+                    <input type="text" placeholder="tseng_kuo_ching@hotmail.com" class="form-control">
                     <div class="text-danger alert-bg">
                       注意 : 申請人不得使用大陸地區郵件帳號作為回覆郵件位址(例如qq.cn或xxx.cn等相關
                       大陸email)。email為聯繫及系統寄發案件審理通知訊息主要方式，請務必提供正確email
@@ -289,7 +288,7 @@
                         書表資料(無則免附)</div>
                       <div class="col-sm-9">
                         <div class="form-row d-flex align-items-center">
-                          <input class="form-control col-xl-5" >
+                          <input class="form-control col-xl-5">
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
@@ -328,14 +327,14 @@
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
