--- a/10_success.html
+++ b/10_success.html
@@ -87,7 +87,7 @@
             <div class="login-status ">
               <span class="mr-2">
                 使用者 : 王小明
-              </span>        
+              </span>
               <span class="mr-2">
                 登入時間 : 2018/11/24 11:51:26
               </span>
@@ -103,7 +103,7 @@
   </nav>
   <div class="container ">
     <div class="pt-3 pb-5">
-      <h2 class="title text-primary">工作計畫及經費預算備查申請及查詢</h2>
+      <h2 class="title text-primary pt-3">工作計畫及經費預算備查申請及查詢</h2>
       <div class="row pb-4 pt-4">
         <div class="col-12">
           <div class="card-header bg-primary text-white mb-3">
@@ -112,8 +112,8 @@
         </div>
         <div class="col-12">
           <div class="card shadow-sm ">
-            <div class="card-body card-table">  
-              <table class="table-style" > 
+            <div class="card-body card-table">
+              <table class="table-style">
                 <tbody class="">
                   <tr class="row">
                     <th for="" class="col-sm-4 table-title pb-3 pt-3 ">
@@ -139,7 +139,7 @@
                       <span>A010711A000202</span>
                     </td>
                   </tr>
-                </tbody>   
+                </tbody>
               </table>
             </div>
           </div>
@@ -165,14 +165,14 @@
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
