--- a/15_basic_information.html
+++ b/15_basic_information.html
@@ -87,7 +87,7 @@
             <div class="login-status ">
               <span class="mr-2">
                 使用者 : 王小明
-              </span>        
+              </span>
               <span class="mr-2">
                 登入時間 : 2018/11/24 11:51:26
               </span>
@@ -103,7 +103,7 @@
   </nav>
   <div class="container ">
     <div class="pt-3 pb-5">
-      <h2 class="title text-primary">基本資料維護</h2>   
+      <h2 class="title text-primary pt-3">基本資料維護</h2>
       <div class="row justify-content-center pb-4 pt-4">
         <div class="col-12">
           <div class="card shadow-sm ">
@@ -121,10 +121,10 @@
                   </div>
                 </div>
                 <div class="row mb-3 form-border">
-                  <label for="" class="form-title col-sm-3" >
+                  <label for="" class="form-title col-sm-3">
                     <span class="text-danger">*</span> 出生日期（西元）</label>
                   <div class="col-sm-9">
-                    <input type="" class="form-control" placeholder="1983/11/01" >
+                    <input type="" class="form-control" placeholder="1983/11/01">
                   </div>
                 </div>
                 <div class="row mb-3 form-border">
@@ -153,17 +153,15 @@
                   </div>
                 </div>
                 <div class="row mb-3 form-border">
-                  <label for="" class="form-title col-sm-3"><span
-                      class="text-danger">*</span> 電子郵件</label>
+                  <label for="" class="form-title col-sm-3"><span class="text-danger">*</span> 電子郵件</label>
                   <div class="col-sm-9">
-                    <input type="text" class="form-control"  placeholder="tseng_kuo_ching@hotmail.com">
+                    <input type="text" class="form-control" placeholder="tseng_kuo_ching@hotmail.com">
                   </div>
                 </div>
                 <div class="row mb-3 form-border">
-                  <label for="" class="form-title col-sm-3"><span
-                      class="text-danger">*</span> 身分證號/外來人口統一證號</label>
+                  <label for="" class="form-title col-sm-3"><span class="text-danger">*</span> 身分證號/外來人口統一證號</label>
                   <div class="col-sm-9">
-                    <input type="text" placeholder="A123456789" class="form-control" >
+                    <input type="text" placeholder="A123456789" class="form-control">
                   </div>
                 </div>
                 <div class="row mb-3 form-border">
@@ -187,7 +185,7 @@
                   <div class="col-sm-9">
                     <div class="form-row mb-2">
                       <div class="col-md-4 my-1 mb-3">
-                        <select class="custom-select mr-sm-2" >
+                        <select class="custom-select mr-sm-2">
                           <option selected>Choose...</option>
                           <option value="1">One</option>
                           <option value="2">Two</option>
@@ -195,7 +193,7 @@
                         </select>
                       </div>
                       <div class="col-md-4 my-1 mb-3">
-                        <select class="custom-select mr-sm-2" >
+                        <select class="custom-select mr-sm-2">
                           <option selected>Choose...</option>
                           <option value="1">One</option>
                           <option value="2">Two</option>
@@ -237,7 +235,7 @@
                   <div class="col-sm-9">
                     <div class="form-row">
                       <div class="col-md-4 my-1 mb-3">
-                        <select class="custom-select mr-sm-2" >
+                        <select class="custom-select mr-sm-2">
                           <option selected>內政部</option>
                           <option value="1">One</option>
                           <option value="2">Two</option>
@@ -261,7 +259,7 @@
                         </select>
                       </div>
                     </div>
-  
+
                   </div>
                 </div>
                 <div class="row mb-3 form-border">
@@ -291,7 +289,8 @@
                   <label for="" class="form-title col-sm-3">業管單位</label>
                   <div class="col-sm-9 d-flex">
                     <div class="form-check mr-2">
-                      <input class="form-check-input" id="Responsible1" type="radio" name="Responsible" value="option1" checked>
+                      <input class="form-check-input" id="Responsible1" type="radio" name="Responsible" value="option1"
+                        checked>
                       <label class="form-check-label" for="Responsible1">
                         火災預防組
                       </label>
@@ -327,7 +326,7 @@
                   </div>
                 </div>
                 <div class="form row mb-3 form-border">
-                  <label  class="form-title col-sm-3">
+                  <label class="form-title col-sm-3">
                     <span class="text-danger">*</span> 財團法人聯絡電話</label>
                   <div class="col-sm-9">
                     <div class="form-row mb-2">
@@ -347,7 +346,7 @@
                   <div class="col-sm-9">
                     <div class="form-row mb-2">
                       <div class="col-md-4 my-1 mb-3">
-                        <select class="custom-select mr-sm-2" >
+                        <select class="custom-select mr-sm-2">
                           <option selected>Choose...</option>
                           <option value="1">One</option>
                           <option value="2">Two</option>
@@ -355,7 +354,7 @@
                         </select>
                       </div>
                       <div class="col-md-4 my-1 mb-3">
-                        <select class="custom-select mr-sm-2" >
+                        <select class="custom-select mr-sm-2">
                           <option selected>Choose...</option>
                           <option value="1">One</option>
                           <option value="2">Two</option>
@@ -414,14 +413,14 @@
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
