--- a/16_work_report.html
+++ b/16_work_report.html
@@ -87,7 +87,7 @@
             <div class="login-status ">
               <span class="mr-2">
                 使用者 : 王小明
-              </span>        
+              </span>
               <span class="mr-2">
                 登入時間 : 2018/11/24 11:51:26
               </span>
@@ -103,7 +103,7 @@
   </nav>
   <div class="container ">
     <div class="pt-3 pb-5">
-      <h2 class="title text-primary">工作報告及財務報表備查申請及查詢</h2>
+      <h2 class="title text-primary pt-3">工作報告及財務報表備查申請及查詢</h2>
       <div class="row pb-4 pt-4">
         <div class="col-12">
           <div class="card-header bg-primary text-white mb-3">
@@ -231,8 +231,7 @@
                   </div>
                 </div>
                 <div class="form-group row form-border">
-                  <label class="col-sm-4 col-form-label form-title"><span
-                      class="text-danger">*</span>
+                  <label class="col-sm-4 col-form-label form-title"><span class="text-danger">*</span>
                     申請人Email</label>
                   <div class="col-sm-8">
                     <input type="text" class="form-control" placeholder="tseng_kuo_ching@hotmail.com">
@@ -285,7 +284,7 @@
                       <div class="col-sm-3 form-title"><span class="text-danger">*</span> 財務報表</div>
                       <div class="col-sm-9">
                         <div class="form-row d-flex align-items-center">
-                          <input class="form-control col-xl-5" >
+                          <input class="form-control col-xl-5">
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
@@ -328,7 +327,7 @@
                         書表資料(無則免附)</div>
                       <div class="col-sm-9">
                         <div class="form-row d-flex align-items-center">
-                          <input class="form-control col-xl-5" >
+                          <input class="form-control col-xl-5">
                           <div class="col-xl-7 mb-3 list-btn-group">
                             <button type="button" class="btn btn-primary btn-sm mr-1 ">上傳內容</button>
                             <button type="button" class="btn btn-light btn-sm mr-1 ">清除內容</button>
@@ -367,14 +366,14 @@
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
